--- a/sass/themes/default.scss
+++ b/sass/themes/default.scss
@@ -16,6 +16,12 @@
       weight-semibold: #{$weight-semibold},
       weight-bold: #{$weight-bold},
       block-spacing: #{$block-spacing},
+      easing: #{$easing},
+      radius-small: #{$radius-small},
+      radius: #{$radius},
+      radius-large: #{$radius-large},
+      radius-rounded: #{$radius-rounded},
+      speed: #{$speed},
 
       scheme-main: #{$white},
       scheme-main-bis: #{$white-bis},
