--- a/sass/components/media.scss
+++ b/sass/components/media.scss
@@ -1,6 +1,6 @@
 @import "../utilities/mixins";
 
-$media-border-color: bulmaRgba($border, 0.5) !default;
+$media-border-color: bulmaRgba($border, 0.5) !default; // TODO
 $media-border-size: 1px !default;
 $media-spacing: 1rem !default;
 $media-spacing-large: 1.5rem !default;
@@ -9,45 +9,64 @@ $media-level-1-spacing: 0.75rem !default;
 $media-level-1-content-spacing: 0.5rem !default;
 $media-level-2-spacing: 0.5rem !default;
 
+:root {
+  @include register-vars(
+    (
+      media-border-color: #{$media-border-color},
+      media-border-size: #{$media-border-size},
+      media-spacing: #{$media-spacing},
+      media-spacing-large: #{$media-spacing-large},
+      media-content-spacing: #{$media-content-spacing},
+      media-level-1-spacing: #{$media-level-1-spacing},
+      media-level-1-content-spacing: #{$media-level-1-content-spacing},
+      media-level-2-spacing: #{$media-level-2-spacing},
+    )
+  );
+}
+
 .#{$class-prefix}media {
   align-items: flex-start;
   display: flex;
   text-align: inherit;
 
   .#{$class-prefix}content:not(:last-child) {
-    margin-bottom: $media-content-spacing;
+    margin-bottom: getVar("media-content-spacing");
   }
 
   .#{$class-prefix}media {
-    border-top: $media-border-size solid $media-border-color;
+    border-top-color: getVar("media-border-color");
+    border-top-style: solid;
+    border-top-width: getVar("media-border-size");
     display: flex;
-    padding-top: $media-level-1-spacing;
+    padding-top: getVar("media-level-1-spacing");
 
     .#{$class-prefix}content:not(:last-child),
     .#{$class-prefix}control:not(:last-child) {
-      margin-bottom: $media-level-1-content-spacing;
+      margin-bottom: getVar("media-level-1-content-spacing");
     }
 
     .#{$class-prefix}media {
-      padding-top: $media-level-2-spacing;
+      padding-top: getVar("media-level-2-spacing");
 
       & + .#{$class-prefix}media {
-        margin-top: $media-level-2-spacing;
+        margin-top: getVar("media-level-2-spacing");
       }
     }
   }
 
   & + .#{$class-prefix}media {
-    border-top: $media-border-size solid $media-border-color;
-    margin-top: $media-spacing;
-    padding-top: $media-spacing;
+    border-top-color: getVar("media-border-color");
+    border-top-style: solid;
+    border-top-width: getVar("media-border-size");
+    margin-top: getVar("media-spacing");
+    padding-top: getVar("media-spacing");
   }
 
   // Sizes
   &.is-large {
     & + .#{$class-prefix}media {
-      margin-top: $media-spacing-large;
-      padding-top: $media-spacing-large;
+      margin-top: getVar("media-spacing-large");
+      padding-top: getVar("media-spacing-large");
     }
   }
 }
@@ -60,11 +79,11 @@ $media-level-2-spacing: 0.5rem !default;
 }
 
 .#{$class-prefix}media-left {
-  @include ltr-property("margin", $media-spacing);
+  @include ltr-property("margin", getVar("media-spacing"));
 }
 
 .#{$class-prefix}media-right {
-  @include ltr-property("margin", $media-spacing, false);
+  @include ltr-property("margin", getVar("media-spacing"), false);
 }
 
 .#{$class-prefix}media-content {
